@@ -1,15 +1,23 @@
-<% @column_span_id ||= element_cell_id(:id => @record.id.to_s, :action => 'update_column', :name => params[:column]) %>
-<% unless controller.send :successful? %>
+<% sleep 1 %>
+<% @column_span_id ||= element_cell_id(:id => @record.id.to_s, :action => 'update_column', :name => @column.name) -%>
+<% unless controller.send :successful? -%>
   alert('<%= escape_javascript(@record.errors.full_messages.join("\n")) %>');
-  <% @record.reload %>
-<% end %>
-<% column = active_scaffold_config.columns[params[:column]] %>
-<% formatted_value = get_column_value(@record, column) %>
-<% if column.inplace_edit %>
-  ActiveScaffold.update_inplace_edit('<%= @column_span_id %>','<%= escape_javascript(formatted_value) %>', <%= column_empty?(formatted_value).to_json %>);
-<% else %>
-  ActiveScaffold.replace_html('<%= @column_span_id %>','<%= escape_javascript(formatted_value) %>');
-<% end %>
-<% if column.calculation? %>
- ActiveScaffold.replace_html('<%= active_scaffold_calculations_id(:column => column) %>', '<%= escape_javascript(render_column_calculation(column)) %>');
-<% end %>
+  <% @record.reload -%>
+<% end -%>
+<% if @column.inplace_edit
+     update_row = @column.inplace_edit if controller.send :successful? -%>
+  <% case update_row
+     when :update_row -%>
+       ActiveScaffold.update_row('<%= element_row_id(:action => :list) %>', '<%= escape_javascript render('row', :record => @record) %>');
+  <% when :update_table -%>
+       ActiveScaffold.replace_html('<%= active_scaffold_content_id %>', '<%= escape_javascript(render('list')) %>');
+  <% else
+       formatted_value = get_column_value(@record, @column) -%>
+       ActiveScaffold.update_inplace_edit('<%= @column_span_id %>','<%= escape_javascript(get_column_value(@record, @column)) %>', <%= column_empty?(formatted_value).to_json %>);
+  <% end -%>
+<% else -%>
+  ActiveScaffold.replace_html('<%= @column_span_id %>','<%= escape_javascript(get_column_value(@record, @column)) %>');
+<% end -%>
+<% if @column.calculation? -%>
+  ActiveScaffold.replace_html('<%= active_scaffold_calculations_id(:column => @column) %>', '<%= escape_javascript(render_column_calculation(@column)) %>');
+<% end -%>
